<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/setting"
        android:title="@string/setting"
        android:orderInCategory="100">
        <menu>
        <item android:id="@+id/setting_displayed_view"
            android:title="@string/setting_displayed_view"
            android:orderInCategory="100" >
            <menu>
                <group android:checkableBehavior="single">
                    <item android:id="@+id/view_option_gridView"
                        android:title="@string/view_option_gridView"
                        android:orderInCategory="101"
                        android:checked="true"/>
                    <item android:id="@+id/view_option_listView"
                        android:title="@string/view_option_listView"
                        android:orderInCategory="102"/>
                    <item android:id="@+id/view_option_staggeredGridView"
                        android:title="@string/view_option_staggeredGridView"
                        android:orderInCategory="103"/>
                </group>
            </menu>
        </item>
        <item android:id="@+id/clear_cache"
            android:title="@string/setting_clear_cache"
            android:orderInCategory="200" />
        </menu>
    </item>
    <item android:id="@+id/about"
        android:title="@string/about_title"
        android:orderInCategory="200"/>
</menu>