<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.mobilabassignment.MainActivity">

    <android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Scrollable View -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/filter_layout_height"
            android:orientation="horizontal">
            <Spinner android:id="@+id/spinner_section"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/filter_padding"
                android:paddingRight="@dimen/filter_padding"
                android:gravity="center_vertical"
                android:spinnerMode="dialog"
                android:prompt="@string/spinner_prompt_section"
                android:layout_weight="1" />
            <Spinner android:id="@+id/spinner_window"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/filter_padding"
                android:paddingRight="@dimen/filter_padding"
                android:gravity="center_vertical"
                android:textAlignment="center"
                android:textSize="@dimen/filter_text_size"
                android:spinnerMode="dialog"
                android:clickable="false"
                android:prompt="@string/spinner_prompt_window"
                android:layout_weight="1"/>
            <Spinner android:id="@+id/spinner_sort"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/filter_padding"
                android:paddingRight="@dimen/filter_padding"
                android:gravity="center_vertical"
                android:textAlignment="center"
                android:textSize="@dimen/filter_text_size"
                android:spinnerMode="dialog"
                android:prompt="@string/spinner_prompt_sort"
                android:layout_weight="1"/>
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        </LinearLayout>

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <include layout="@layout/toolbar_layout"/>
        </android.support.design.widget.AppBarLayout>
    </android.support.design.widget.CoordinatorLayout>
</LinearLayout>
